case_alpha/envoy-gateway/cors-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: cors-policy
  namespace: alpha
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: vllm-route
  cors:
    allowOrigins:
      - "https://chat.yacodata.com"
      - "https://*.yacodata.com"
      - "http://localhost:3000"
      - "http://localhost:8000"
    allowMethods:
      - POST
      - OPTIONS
      - GET
    allowHeaders:
      - Content-Type
      - Authorization
    maxAge: "86400"
