case_alpha/envoy-gateway/httproute-vllm.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-route
  namespace: alpha
spec:
  parentRefs:
    - name: alpha-gateway
      namespace: alpha
  hostnames:
    - llm.yacodata.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/
      backendRefs:
        - name: vllm-service
          port: 8100
